added some oblique strategies functionality
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11052 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -430,6 +430,9 @@ formatting.text.color.label=Color
 formatting.node.shape.label=Shape
 formatting.node.stroke.label=Stroke
 newnode.html=New Node
+#HO 16/12/2011 BEGIN ******
+newobliquestrategiesnode.html=Oblique Strategies
+#HO 16/12/2011 END *********
 newtext.html=New Text
 
 #items related to saving files...
@@ -1657,11 +1660,12 @@ toolbar.background=afb6c6
 filterPanelColor=6273A1
 
 #HO 23/06/2010 BEGIN ***********************
+appletToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,obliqueStrategiesNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
 #appletToolbarToolNames=selectionTool,nodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
-appletToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
+#appletToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool
 
-
-mainToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
+mainToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,obliqueStrategiesNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
+#mainToolbarToolNames=selectionTool,nodeModeTool,IBISNodeModeTool,linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
 #mainToolbarToolNames=selectionTool,nodeModeTool,ibisNodeModeTool, linkModeTool,rapidLinkModeTool,richTextTool,separator,zoomTool,handTool,separator,launchPathwayTool
 #HO 23/06/2010 END ***********************
 
@@ -2764,6 +2768,11 @@ IBISNodeTool.tooltip=IBIS Tool
 #HO 12/12/2010 BEGIN *******
 menu.content.addIBISnode=Add IBIS Node
 #HO 12/12/2010 END *******
+#HO 16/12/2011 BEGIN ****
+obliqueStrategiesNodeModeTool.tooltip=Oblique Strategies Deck Tool
+obliqueStrategiesNodeTool.tooltip=Oblique Strategies Tool
+menu.content.addObliqueStrategiesDeck=Draw Oblique Strategies Card
+#HO 16/12/2011 END *****
 #HO 17/12/2010 BEGIN ***************
 menu.ibis=Change IBIS Status
 menu.ibis.type=Change IBIS Type
@@ -2796,6 +2805,19 @@ IBISNodeModeTool.cursorID=1
 
 # HO 29/10/2010 END *****************
 
+# HO 16/12/2011 BEGIN ************
+obliqueStrategiesNodeModeTool.class=tufts.vue.ObliqueStrategiesNodeTool$ObliqueStrategiesNodeModeTool
+
+obliqueStrategiesNodeModeTool.name=Oblique Strategies Deck Tool
+
+obliqueStrategiesNodeModeTool.shortcutKey=q
+
+obliqueStrategiesNodeModeTool.raw=/tufts/vue/images/obliquestrategiessmall.jpg
+
+obliqueStrategiesNodeModeTool.cursorID=1
+
+# HO 16/12/2011 END *****************
+
 #HO 29/10/2010 BEGIN *******************
 IBISNodeTool.class=tufts.vue.IBISNodeTool
 
@@ -2807,6 +2829,15 @@ IBISNodeTool.defaultSubtool=issue
 
 # cursor 1 is "crosshair" cursor, same on Mac & PC
 IBISNodeTool.cursorID=1
+
+#HO 16/12/2011 BEGIN **********
+ObliqueStrategiesNodeTool.class=tufts.vue.ObliqueStrategiesNodeTool
+
+ObliqueStrategiesNodeTool.name=Oblique Strategies Deck Tool
+
+# cursor 1 is "crosshair" cursor, same on Mac & PC
+ObliqueStrategiesNodeTool.cursorID=1
+#HO 16/12/2011 END ************
 
 IBISNodeTool.issue.class=tufts.vue.IBISNodeTool$IBISSubTool
 
