Added file lock and unlock menu items.
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11058 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -273,6 +273,9 @@ menu.help=Help
 menu.file.new=New
 menu.file.revert=Revert
 menu.file.import=Import
+#HO 10/01/2012 BEGIN ********
+menu.file.unlock=Unlock
+#HO 10/01/2012 END **********
 menu.file.importfoldercontent=Folder Content...
 menu.file.importdataset=Dataset...
 menu.file.importrdffile=RDF File...
@@ -2437,7 +2440,7 @@ helpMenu.feedback.url=http://vue.uit.tufts.edu/contact/index.cfm
 
 helpMenu.userGuide.url=http://vue.uit.tufts.edu/userdoc/
 // HO 31/10/2011 BEGIN *********
-helpMenu.designVUEUserGuide.url=http://www3.imperial.ac.uk/designengineering/tools/vue/
+helpMenu.designVUEUserGuide.url=http://www3.imperial.ac.uk/designengineering/tools/designvue/
 helpMenu.designVUEfeedback.url=mailto:designvue.imperial@gmail.com?subject=designVUE%20Feedback
 helpMenu.designVUEForum.url=https://vue-forums.uit.tufts.edu/forums/show/23.page
 // HO 31/10/2011 END ***********
