Added a refresh menu item
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11059 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -275,6 +275,7 @@ menu.file.revert=Revert
 menu.file.import=Import
 #HO 10/01/2012 BEGIN ********
 menu.file.unlock=Unlock
+menu.file.refresh=Refresh
 #HO 10/01/2012 END **********
 menu.file.importfoldercontent=Folder Content...
 menu.file.importdataset=Dataset...
@@ -624,6 +625,10 @@ dialog.addurlaction.message=Malformed URL, resource could not be added.
 dialog.addurlaction.title=Malformed URL
 dialog.revert.message=There is no saved version of this map to revert to.
 dialog.revert.title=Can Not Revert
+#HO 10/01/2012 BEGIN ********
+dialog.refresh.message=There is no saved version of this map to refresh to.
+dialog.refresh.title=Can Not Refresh
+#HO 10/01/2012 END **********
 dialog.checkforupdatesaction.message=There are no resource updates available at this time
 dialog.checkforupdatesaction.title=Update Resources
 
@@ -669,6 +674,13 @@ optiondialog.revertlastsave.title=Revert to last saved version
 optiondialog.revertlastsave.yes=Yes
 optiondialog.revertlastsave.no=No
 optiondialog.revertlastsave.cancel=Cancel
+#HO 10/01/2012 BEGIN *******
+optiondialog.refreshlastsave.message=Are you sure you want to refresh to the last version saved by
+optiondialog.refreshlastsave.title=Refresh to last version saved by
+optiondialog.refreshlastsave.yes=Yes
+optiondialog.refreshlastsave.no=No
+optiondialog.refreshlastsave.cancel=Cancel
+#HO 10/01/2012 END *********
 optiondialog.savechages.message=Do you want to save the changes you made to
 optiondialog.savechages.title=Save changes?
 optiondialog.savechages.dontsave=Don't Save
