now have two different suffixes, one for .vue and one for .vpk, also fixed bug with not being allowed to save a locked file to a different name
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11061 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2342,6 +2342,11 @@ vue.extension=.vue
 
 vue.archive.extension=.vpk
 
+#HO 12/01/2012 BEGIN ******
+vue.lock.extension=.vle
+vue.archive.lock.extension=.vlk
+#HO 12/01/2012 END ********
+
 refresh.raw=/tufts/vue/images/btn_refresh_blk.gif
 
 vue.type=application/vue
