naming sorted... subject to testing
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11062 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -675,8 +675,8 @@ optiondialog.revertlastsave.yes=Yes
 optiondialog.revertlastsave.no=No
 optiondialog.revertlastsave.cancel=Cancel
 #HO 10/01/2012 BEGIN *******
-optiondialog.refreshlastsave.message=Are you sure you want to refresh to the last version saved by
-optiondialog.refreshlastsave.title=Refresh to last version saved by
+optiondialog.refreshlastsave.message=Are you sure you want to refresh to the last version saved
+optiondialog.refreshlastsave.title=Refresh to last version saved
 optiondialog.refreshlastsave.yes=Yes
 optiondialog.refreshlastsave.no=No
 optiondialog.refreshlastsave.cancel=Cancel
