should be the release version
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11067 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -276,6 +276,7 @@ menu.file.import=Import
 #HO 10/01/2012 BEGIN ********
 menu.file.unlock=Unlock
 menu.file.refresh=Refresh
+menu.file.quickrefresh=Quick Refresh
 #HO 10/01/2012 END **********
 menu.file.importfoldercontent=Folder Content...
 menu.file.importdataset=Dataset...
@@ -628,6 +629,8 @@ dialog.revert.title=Can Not Revert
 #HO 10/01/2012 BEGIN ********
 dialog.refresh.message=There is no saved version of this map to refresh to.
 dialog.refresh.title=Can Not Refresh
+dialog.quickrefresh.message=There is no saved version of this map to refresh to.
+dialog.quickrefresh.title=Can Not Refresh
 #HO 10/01/2012 END **********
 dialog.checkforupdatesaction.message=There are no resource updates available at this time
 dialog.checkforupdatesaction.title=Update Resources
@@ -680,6 +683,11 @@ optiondialog.refreshlastsave.title=Refresh to last version saved
 optiondialog.refreshlastsave.yes=Yes
 optiondialog.refreshlastsave.no=No
 optiondialog.refreshlastsave.cancel=Cancel
+optiondialog.quickrefreshlastsave.message=Are you sure you want to quick-refresh to the last version saved
+optiondialog.quickrefreshlastsave.title=Quick Refresh to last version saved
+optiondialog.quickrefreshlastsave.yes=Yes
+optiondialog.quickrefreshlastsave.no=No
+optiondialog.quickrefreshlastsave.cancel=Cancel
 #HO 10/01/2012 END *********
 optiondialog.savechages.message=Do you want to save the changes you made to
 optiondialog.savechages.title=Save changes?
@@ -2444,7 +2452,7 @@ vue.version=3.1.1
 
 vue.build.date=2003-2011
 # HO 08/07/2011 BEGIN ************
-designVUE.build.date=2010-2011
+designVUE.build.date=2010-2012
 designVUE.version=designVUE beta
 # HO 08/07/2011 END **************
 
