Changed the application title and version in the file header
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11085 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2453,7 +2453,7 @@ vue.version=3.1.1
 vue.build.date=2003-2012
 # HO 08/07/2011 BEGIN ************
 designVUE.build.date=2010-2012
-designVUE.version=designVUE beta
+designVUE.version=1.04 (beta)
 # HO 08/07/2011 END **************
 
 vue.release.url=http://vue.tufts.edu/current_release.xml
