introduced .vdk file type and removed unnecessary saves on creation of new wormhole
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11089 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -1354,9 +1354,15 @@ dialog.mappingfile.title=XML Mapping File Exception
 publisher.maponly=Map Only
 publisher.mapandresources=Map and Resources
 publisher.vpk=VUE Package (vpk)
+#HO 23/03/2012 BEGIN ********
+publisher.vdk=designVUE Package (vdk)
+#HO 23/03/2012 END **********
 publisher.publishinfo0=The Publish function allows a user to deposit a concept map into a registered digital repository. Select the different modes to learn more.
 publisher.publishinfo1=Map Only saves only the map to the digital repository. Digital resources are not attached, but the resource paths are maintained, whether to a local computer or the web.
-publisher.publishinfo2=VUE Package (vpk) embeds digital resources within the map. The resources are accessible to all users viewing the map. This mode creates a VUE package (vpk) file, which can be uploaded to a registered digital repository or saved locally.
+#HO 23/03/2012 BEGIN *********
+#publisher.publishinfo2=VUE Package (vpk) embeds digital resources within the map. The resources are accessible to all users viewing the map. This mode creates a VUE package (vpk) file, which can be uploaded to a registered digital repository or saved locally.
+publisher.publishinfo2=VUE Package (vpk) and designVUE Package (vdk) embed digital resources within the map. The resources are accessible to all users viewing the map. This mode creates a VUE package (vpk) or designVUE package (vdk) file, which can be uploaded to a registered digital repository or saved locally.
+#HO 23/03/2012 END ********
 publisher.publishinfo3=Map and Resources creates a duplicate of all digital resources and uploads these resources and the map to a registered digital repository. The resources are accessible to all users viewing the map.
 publisher.publishinfo4=Publish IMSCP Map to Sakai saves concept map in Sakai content hosting system.
 publisher.publishinfo5=Zips map with local resources.
@@ -2349,10 +2355,16 @@ NoImage=/tufts/vue/images/NoImage.gif
 vue.extension=.vue
 
 vue.archive.extension=.vpk
+#HO 23/03/2012 BEGIN ******
+designvue.archive.extension=.vdk
+#HO 23/03/2012 END ********
 
 #HO 12/01/2012 BEGIN ******
 vue.lock.extension=.vle
 vue.archive.lock.extension=.vlk
+#HO 23/03/2012 BEGIN *****
+designvue.archive.lock.extension=.dlk
+#HO 23/03/2012 END *******
 #HO 12/01/2012 END ********
 
 refresh.raw=/tufts/vue/images/btn_refresh_blk.gif
@@ -2591,6 +2603,9 @@ vueFileFilter.xml.text=XML
 vueFileFilter.png.text=PNG
 
 vueFileFilter.vpk.text=VPK (VUE Package)
+#HO 23/03/2012 BEGIN ********
+vueFileFilter.vdk.text=VDK (designVUE Package)
+#HO 23/03/2012 END **********
 
 #create
 presentationDialog.button.makeSlides.raw=/tufts/vue/images/btn_makeslides.gif
