Oblique Strategies node labels are now available for translation
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11104 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2476,11 +2476,11 @@ vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 helpMenu.feedback.url=http://vue.uit.tufts.edu/contact/index.cfm
 
 helpMenu.userGuide.url=http://vue.uit.tufts.edu/userdoc/
-// HO 31/10/2011 BEGIN *********
+# HO 31/10/2011 BEGIN *********
 helpMenu.designVUEUserGuide.url=http://www3.imperial.ac.uk/designengineering/tools/designvue/
 helpMenu.designVUEfeedback.url=mailto:designvue.imperial@gmail.com?subject=designVUE%20Feedback
 helpMenu.designVUEForum.url=https://vue-forums.uit.tufts.edu/forums/show/23.page
-// HO 31/10/2011 END ***********
+# HO 31/10/2011 END ***********
 
 helpMenu.vueWebsite.url=http://vue.uit.tufts.edu/forums/index.cfm
 
@@ -3210,6 +3210,108 @@ wormhole.node.target.label.default=Click and drag to desired target node
 alreadyOpenFile.text=is already open. Please close it or choose another name.
 alreadyOpenFile.title=File Already Open
 #HO 23/03/2011 END ****************
+# HO 06/06/2012 BEGIN *********
+obliqueStrategies.label.1=Is something too wet, dry?
+obliqueStrategies.label.2=Balance
+obliqueStrategies.label.3=Is it bankrupt?
+obliqueStrategies.label.4=Subtlety- Obscurity-
+obliqueStrategies.label.5=Have you boxed yourself in?
+obliqueStrategies.label.6=Look for distractions
+obliqueStrategies.label.7=Everything comes from its opposite
+obliqueStrategies.label.8=Try it again
+obliqueStrategies.label.9=How many more times?
+obliqueStrategies.label.10=If X was Y
+obliqueStrategies.label.11=Re-read the situation
+obliqueStrategies.label.12=Inspiration doesn't knock
+obliqueStrategies.label.13=Impatience is not a virtue
+obliqueStrategies.label.14=It's in you somewhere
+obliqueStrategies.label.15=Are you open to suggestion? Listen-
+obliqueStrategies.label.16=If it was just a dream
+obliqueStrategies.label.17=Bring your feelings to life
+obliqueStrategies.label.18=What are you frightened of?
+obliqueStrategies.label.19=Are you in the right place?
+obliqueStrategies.label.20=Find the truth
+obliqueStrategies.label.21=Vast imagination
+obliqueStrategies.label.22=Ask your muse
+obliqueStrategies.label.23=B before C
+obliqueStrategies.label.24=Do the pieces fit together?
+obliqueStrategies.label.25=Tie up any loose ends
+obliqueStrategies.label.26=I love your work
+obliqueStrategies.label.27=Throw it out of kilter
+obliqueStrategies.label.28=Texture- Transparency-
+obliqueStrategies.label.29=Limit your tools
+obliqueStrategies.label.30=Is it unnecessarily long?
+obliqueStrategies.label.31=One revolution
+obliqueStrategies.label.32=A rainbow of colours
+obliqueStrategies.label.33=It's only temporary -\nuntil you make it permanent
+obliqueStrategies.label.34=Silence first
+obliqueStrategies.label.35=Do what you have to do
+obliqueStrategies.label.36=Are you investing your time wisely?
+obliqueStrategies.label.37=Is something tying it down?
+obliqueStrategies.label.38=Falling out of line
+obliqueStrategies.label.39=Different influences for different occasions -\nfind the right one
+obliqueStrategies.label.40=Change your frame of mind
+obliqueStrategies.label.41=Get a second opinion -\ntake only positive advice
+obliqueStrategies.label.42=Reconsider your objective
+obliqueStrategies.label.43=Ask someone with fresh ears
+obliqueStrategies.label.44=Turn your mind outward
+obliqueStrategies.label.45=Make it bleed
+obliqueStrategies.label.46=Is there an opportunity here?
+obliqueStrategies.label.47=Put the ending out of mind
+obliqueStrategies.label.48=Mistakes as creative genius
+obliqueStrategies.label.49=Break it down into its elements
+obliqueStrategies.label.50=Get uncomfortable
+obliqueStrategies.label.51=Are the foundations solid?
+obliqueStrategies.label.52=Be original
+obliqueStrategies.label.53=Break the rules
+obliqueStrategies.label.54=Show off!
+obliqueStrategies.label.55=Are you working efficiently?
+obliqueStrategies.label.56=Play into your strengths
+obliqueStrategies.label.57=Think back to the past - \nare you standing still?
+obliqueStrategies.label.58=Close your eyes and feel it
+obliqueStrategies.label.59=In a different light
+obliqueStrategies.label.60=Make it your own
+obliqueStrategies.label.61=What will you make of it years from now?
+obliqueStrategies.label.62=Collaborate with a friend
+obliqueStrategies.label.63=Paint it black
+obliqueStrategies.label.64=Focus on development
+obliqueStrategies.label.65=Look for a pattern, rearrange it
+obliqueStrategies.label.66=Sleep on it
+obliqueStrategies.label.67=Work around its main element
+obliqueStrategies.label.68=Detail last
+obliqueStrategies.label.69=Work in the future
+obliqueStrategies.label.70=Flow
+obliqueStrategies.label.71=Merge two different ideas
+obliqueStrategies.label.72=Time as currency
+obliqueStrategies.label.73=Redefine the problem
+obliqueStrategies.label.74=It's a journey
+obliqueStrategies.label.75=Recycle
+obliqueStrategies.label.76=Familiar crossroads\nin an unfamiliar journey
+obliqueStrategies.label.77=Take only what you need
+obliqueStrategies.label.78=Take only what you need
+obliqueStrategies.label.79=Is something subconscious going on?
+obliqueStrategies.label.80=Dynamics
+obliqueStrategies.label.81=Will others find it interesting?
+obliqueStrategies.label.82=It takes a lot of coffee to\nraise the cream to the top
+obliqueStrategies.label.83=What jumps out at you?\nWhat did you miss?
+obliqueStrategies.label.84=Embrace confusion
+obliqueStrategies.label.85=Sound organized in time
+obliqueStrategies.label.86=Draw outside the lines
+obliqueStrategies.label.87=Go for broke
+obliqueStrategies.label.88=Clean lines-\nSmooth edges-
+obliqueStrategies.label.89=Focus on potential
+obliqueStrategies.label.90=Look for alternate routes
+obliqueStrategies.label.91=Save your work as a checkpoint,\nexperiment and be on the lookout\nfor happy accidents
+obliqueStrategies.label.92=Camouflage the technicalities
+obliqueStrategies.label.93=Fill in the gaps
+obliqueStrategies.label.94=Would you do it again?
+obliqueStrategies.label.95=Give triviality room to mature
+obliqueStrategies.label.96=What is it calling you?
+obliqueStrategies.label.97=What are your detractors thinking?
+obliqueStrategies.label.98=Consider taking several steps back
+obliqueStrategies.label.99=Expand the boundaries
+obliqueStrategies.label.100=Yes
+# HO 06/06/2012 END ***********
 ######################################################################################################################
 #                                                                                                                    #
 # Make sure to add all new human-readable strings (that appear in the GUI and should be localized) above the comment #
