turning off text wrap and beanshell menu item and giving a special build to Evgeny Volkov for the Russian translation of designVUE
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11121 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -274,6 +274,9 @@ menu.file.new=New
 menu.file.revert=Revert
 menu.file.import=Import
 #HO 10/01/2012 BEGIN ********
+#HO 15/06/2012 BEGIN *****
+menu.file.lock=Lock
+#HO 15/06/2012 END *******
 menu.file.unlock=Unlock
 menu.file.refresh=Refresh
 menu.file.quickrefresh=Quick Refresh
@@ -315,6 +318,10 @@ menu.windows.seasr=SEASR...
 menu.windows.conanalysis=Connectivity...
 menu.windows.mergemaps=Merge Maps...
 menu.windows.publish=Upload to Repository
+#HO 14/06/2012 BEGIN *********
+menu.windows.beanshell=Launch Beanshell console
+menu.windows.beanshell.url=http://localhost:7777/remote/jconsole.html
+#HO 14/06/2012 END *********
 menu.windows.exporthandouts=Export Handouts and Notes (PDF)
 menu.windows.printvisible=Print Visible...
 menu.windows.formatpalette=Formatting Palette
@@ -3286,8 +3293,8 @@ obliqueStrategies.label.72=Time as currency
 obliqueStrategies.label.73=Redefine the problem
 obliqueStrategies.label.74=It's a journey
 obliqueStrategies.label.75=Recycle
-obliqueStrategies.label.76=Familiar crossroads\nin an unfamiliar journey
-obliqueStrategies.label.77=Take only what you need
+obliqueStrategies.label.76=Make room for new ideas
+obliqueStrategies.label.77=Familiar crossroads\nin an unfamiliar journey
 obliqueStrategies.label.78=Take only what you need
 obliqueStrategies.label.79=Is something subconscious going on?
 obliqueStrategies.label.80=Dynamics
