--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2473,9 +2473,9 @@ vue.build.date=2003-2012
 # HO 08/07/2011 BEGIN ************
 designVUE.build.date=2010-2012
 #HO 15/06/2012 BEGIN ******
-#designVUE.version=1.04.1 (beta)
+designVUE.version=1.04.1 (beta)
 #interim release for Evgeny Volkov
-designVUE.version=1.04.1.b (beta)
+#designVUE.version=1.04.1.b (beta)
 #HO 15/06/2012 END ******
 # HO 08/07/2011 END **************
 
