added experimental text wrap feature to edit menu
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11125 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -255,6 +255,9 @@ menu.format.applystyle=Apply Style
 menu.format.copystyle=Copy Style
 menu.format.autozoom=Hover Zoom
 menu.edit.formattingpalette=Formatting Palette 
+#HO 18/06/2012 BEGIN *********
+menu.edit.textwrap=Text Wrap
+#HO 18/06/2012 END **********
 menu.windows=Windows
 menu.file=File
 menu.file.nodenotes=Node notes outline
@@ -320,7 +323,8 @@ menu.windows.mergemaps=Merge Maps...
 menu.windows.publish=Upload to Repository
 #HO 14/06/2012 BEGIN *********
 menu.windows.beanshell=Launch Beanshell console
-menu.windows.beanshell.url=http://localhost:7777/remote/jconsole.html
+#menu.windows.beanshell.url=http://localhost:7777/remote/jconsole.html
+menu.windows.beanshell.url=http://localhost:7777/
 #HO 14/06/2012 END *********
 menu.windows.exporthandouts=Export Handouts and Notes (PDF)
 menu.windows.printvisible=Print Visible...
