reduced minimum image size to 8x8, fixed some null pointer issues notified by a user with WinXP SP3
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11221 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -3333,4 +3333,45 @@ obliqueStrategies.label.100=Yes
 # about halfway through this file;  that will remind us to include them in future translations.                      #
 #                                                                                                                    #
 ######################################################################################################################
+#HO 04/07/2012 BEGIN ******
+#attempt to solve problems with Win XP SP3 - it looks like it's not using
+#the windows properties settings, and they're the same for both
+#win and mac
+zoomTool.class=tufts.vue.ZoomTool
 
+zoomTool.name=Zoom Tool
+
+
+#zoomTool.subtools=zoomIn,zoomOut,zoomFullScreen,zoomOutToMap
+zoomTool.subtools=zoomIn,zoomOut,zoomFullScreen
+
+zoomTool.defaultSubtool=zoomIn
+
+zoomTool.shortcutKey=z
+
+zoomTool.cursor=/tufts/vue/images/zoomIn_cursor_32.gif,15,15
+
+zoomTool.zoomIn.class=tufts.vue.VueSimpleTool
+
+zoomTool.zoomIn.name=Zoom In
+
+zoomTool.zoomIn.raw=/tufts/vue/images/toolbar_zoomIn.gif
+
+zoomTool.zoomIn.cursor=/tufts/vue/images/zoomIn_cursor_32.gif,15,15
+
+zoomTool.zoomOut.class=tufts.vue.VueSimpleTool
+
+zoomTool.zoomOut.name=Zoom Out
+
+zoomTool.zoomOut.raw=/tufts/vue/images/toolbar_zoomOut.gif
+
+zoomTool.zoomOut.cursor=/tufts/vue/images/zoomOut_cursor_32.gif,15,15
+
+zoomTool.zoomFullScreen.class=tufts.vue.VueSimpleTool
+
+zoomTool.zoomFullScreen.name=Zoom Full Screen
+
+zoomTool.zoomFullScreen.raw=/tufts/vue/images/zoomToggle.gif
+
+zoomTool.zoomFullScreen.cursor=/tufts/vue/images/zoomToggle_cursor.gif,15,15
+#HO 04/07/2012 END ********
