adding CFBundleIdentifier to the 1.6+ build of mac os

--- a/VUE2/src/MacOS/Info16.plist
+++ b/VUE2/src/MacOS/Info16.plist
@@ -30,6 +30,8 @@
 	<string>VUE.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleIdentifier</key>
+	<string>edu.tufts.tts.ests.VUE</string>
 	<key>CFBundleName</key>
 	<string>VUE</string>
 	<key>CFBundlePackageType</key>
