--- a/VUE2/src/build.xml
+++ b/VUE2/src/build.xml
@@ -62,7 +62,7 @@
   <property name="test.home"   value="${top.dir}/test" />
   <property name="test.lib"   value="${test.home}/lib" />
   <property name="junit.jar"   value="${test.lib}/junit.jar" />
-  <property name="target.version" value="1.5"/>
+  <property name="target.version" value="1.6"/>
   <property name="MacDist" value="MacDist"/>
   <property name="MacDist16" value="MacDist16"/>
   <property name="jre.home" value="/usr/local/jenkins/jre/jre7"/>
@@ -88,7 +88,7 @@
 -->
   <property name="compile.debug"       value="true"/>
   <property name="compile.deprecation" value="false"/>
-  <property name="compile.optimize"    value="false"/>
+  <property name="compile.optimize"    value="true"/>
 
   <!-- runtime argumennts for debugging -->
   <property name="vue.args"    value=""/>
