trying to fix retina display in the right build

--- a/VUE2/src/MacOS/Info16.plist
+++ b/VUE2/src/MacOS/Info16.plist
@@ -92,6 +92,8 @@
 			<key>com.apple.mrj.application.growbox.intrudes</key>
 			<string>true</string>
 		</dict>
-	</dict>
+  </dict>
+   <key>NSHighResolutionCapable</key>
+   <true/>
 </dict>
 </plist>
