Fix Urls that pointed to vue.uit.tufts.edu
Additionally fixes the link to VUE forums.

--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2353,15 +2353,15 @@ vue.release.url=http://vue.tufts.edu/current_release.xml
 vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 
 #help menu
-helpMenu.feedback.url=http://vue.uit.tufts.edu/contact/index.cfm
+helpMenu.feedback.url=http://vue.tufts.edu/contact/index.cfm
 
-helpMenu.userGuide.url=http://vue.uit.tufts.edu/userdoc/
+helpMenu.userGuide.url=http://vue.tufts.edu/userdoc/
 
-helpMenu.vueWebsite.url=http://vue.uit.tufts.edu/forums/index.cfm
+helpMenu.vueWebsite.url=https://vue-forums.uit.tufts.edu/
 
 helpMenu.releaseNotes.file=/tufts/vue/resources/ReleaseNotes.htm
 
-helpMenu.mymaps.url=http://vue.uit.tufts.edu/mymaps/index.cfm
+helpMenu.mymaps.url=http://vue.tufts.edu/mymaps/index.cfm
 
 #formatting palette
 formatting.location.x=560
