--- a/VUE2/src/tufts/vue/VueResources.properties
+++ b/VUE2/src/tufts/vue/VueResources.properties
@@ -2353,7 +2353,7 @@ vue.release.url=http://vue.tufts.edu/current_release.xml
 vue.download.url=http://vue.tufts.edu/download/index.cfm?fromvue=1
 
 #help menu
-helpMenu.feedback.url=http://vue.tufts.edu/contact/index.cfm
+helpMenu.feedback.url=http://vue.tufts.edu/contact/
 
 helpMenu.userGuide.url=http://vue.tufts.edu/userdoc/
 
