Added: Child node layout by row or column.

--- a/VUE2/src/main/resources/tufts/vue/VueResources.properties
+++ b/VUE2/src/main/resources/tufts/vue/VueResources.properties
@@ -357,6 +357,8 @@ menu.format.arrange.bringtofront=Send to Front
 menu.format.arrange.bringtofront.tooltip=Raise object to the top, completely unobscured
 menu.format.arrange.moveup=Move Up
 menu.format.arrange.movedown=Move Down
+menu.format.arrange.childrenvertical=Children by Column
+menu.format.arrange.childrenhorizontal=Children by Row
 menu.format.node.resize=Reset to minimum size
 menu.format.link.curved=Curved
 menu.format.link.straight=Straight
