--- a/VUE2/test/build.xml
+++ b/VUE2/test/build.xml
@@ -92,6 +92,7 @@ This ant build file:
     <pathelement location="${lib.home}/saaj-api-unsigned.jar" />
     <pathelement location="${lib.home}/xercesImpl-2.7.1.jar" />
     <pathelement location="${build.lib}/junit.jar"/>
+    <pathelement location="${build.lib}/hamcrest-all-1.3.jar"/>
     <pathelement location="${lib.home}/saaj-api-unsigned.jar" />
     <pathelement location="${lib.home}/googleapi.jar" />
     <pathelement path="${lib.home}/google-collect-snapshot-20080820.jar"/>
@@ -309,9 +310,10 @@ This ant build file:
 
 
 <target name="test" depends="compile" description="Tests for Map Comparison">
-    <junit printsummary="yes" haltonerror="true" haltonfailure="true" fork="true">
+    <junit printsummary="yes" logfailedtests="true" showoutput="true" haltonerror="true" haltonfailure="true" fork="true">
         <formatter type="plain" />
         <test name="edu.tufts.vue.VUETest" outfile="VUETest" todir="${basedir}"/>
+        <test name="tufts.vue.ToolboxTest" outfile="ToolboxTest" todir="${basedir}"/>
         <classpath refid="compile.classpath" />
     </junit>
 </target>
