--- a/VUE2/test/build.xml
+++ b/VUE2/test/build.xml
@@ -73,7 +73,7 @@ This ant build file:
     <pathelement location="${basedir}" />
     <pathelement location="${basedir}/src" />
     <pathelement location="${basedir}/../src" />
-    <pathelement location="${vue.classes}" />
+    <pathelement location="${vue.classes}/VUE.jar" />
     <pathelement location="${lib.home}" />	
     <pathelement location="${build.class}"/>
     <pathelement location="../src/dist/lib/osid/Fedora20Repository-1.0.jar"/>
@@ -91,54 +91,54 @@ This ant build file:
     <pathelement location="${lib.home}/fedora_2_0-client.jar"/>
     <pathelement location="${lib.home}/saaj-api-unsigned.jar" />
     <pathelement location="${lib.home}/xercesImpl-2.7.1.jar" />
+    <pathelement location="${lib.home}/quaqua.jar" />
     <pathelement location="${build.lib}/junit.jar"/>
     <pathelement location="${build.lib}/hamcrest-all-1.3.jar"/>
     <pathelement location="${lib.home}/saaj-api-unsigned.jar" />
     <pathelement location="${lib.home}/googleapi.jar" />
     <pathelement path="${lib.home}/google-collect-snapshot-20080820.jar"/>
-  	<pathelement path="${lib.home}/iText-2.1.4.jar"/>
-  	 
-  	<!-- for applet -->
-  	<pathelement path="${lib.home}/looks-2.1.4.jar" />   
-	
+    <pathelement path="${lib.home}/iText-2.1.4.jar"/>
+
+    <!-- for applet -->
+    <pathelement path="${lib.home}/looks-2.1.4.jar" />   
     <pathelement location="${lib.home}/okiSID.jar" />	
-	<pathelement location="${lib.home}/log4j-1.2.12.jar" />
-	<pathelement location="${lib.home}/MRJAdapter.jar" />
+    <pathelement location="${lib.home}/log4j-1.2.12.jar" />
+    <pathelement location="${lib.home}/MRJAdapter.jar" />
     <pathelement location="${lib.home}/apple-laf.jar" />
     <pathelement location="artifact.xml" />
     <pathelement location="../src/build/classes/edu/tufts/osidimpl/repository/artifact.ArtifactResult.class" />
-    
-	<!-- for provider -->
-	<pathelement path="${lib.home}/HiveSupport-1.0.jar" />
-	<pathelement path="${lib.home}/HiveRepositoryPublish-1.0.jar" />
-	<pathelement path="${lib.home}/HiveAuthentication-1.0.jar" />
-	<pathelement path="${lib.home}/OsidRegistry.jar" />
-	<pathelement path="${lib.home}/OsidProvider.jar" />
-	<pathelement path="${lib.home}/MIT-OTS.jar" />
-	<pathelement path="${lib.home}/javatar.jar" />
 
-	<!-- Hive support -->
-	<pathelement path="${lib.home}/commons-httpclient-2.0.jar" />
-	<pathelement path="${lib.home}/commons-logging-2.0.jar" />
-	<pathelement path="${lib.home}/jdom.jar" />
-	<pathelement path="${lib.home}/jhapi.jar" />
-	<pathelement path="${lib.home}/jnet.jar" />
-	<pathelement path="${lib.home}/jsse.jar" />
+    <!-- for provider -->
+    <pathelement path="${lib.home}/HiveSupport-1.0.jar" />
+    <pathelement path="${lib.home}/HiveRepositoryPublish-1.0.jar" />
+    <pathelement path="${lib.home}/HiveAuthentication-1.0.jar" />
+    <pathelement path="${lib.home}/OsidRegistry.jar" />
+    <pathelement path="${lib.home}/OsidProvider.jar" />
+    <pathelement path="${lib.home}/MIT-OTS.jar" />
+    <pathelement path="${lib.home}/javatar.jar" />
+
+    <!-- Hive support -->
+    <pathelement path="${lib.home}/commons-httpclient-2.0.jar" />
+    <pathelement path="${lib.home}/commons-logging-2.0.jar" />
+    <pathelement path="${lib.home}/jdom.jar" />
+    <pathelement path="${lib.home}/jhapi.jar" />
+    <pathelement path="${lib.home}/jnet.jar" />
+    <pathelement path="${lib.home}/jsse.jar" />
 
    <!-- RDF support -->
    <pathelement path="${lib.home}/arq-2.5.3.jar" />
    <pathelement path="${lib.home}/jena-2.5.3.jar" />
-    <pathelement path="${lib.home}/iri.jar" />
-     <pathelement path="${lib.home}/concurrent.jar" />
-    <pathelement location="${java.class.path}" />
-    
+   <pathelement path="${lib.home}/iri.jar" />
+   <pathelement path="${lib.home}/concurrent.jar" />
+   <pathelement location="${java.class.path}" />
+
     <!-- castor -->
     <pathelement path="${lib.home}/castor-0.9.7-xml.jar" />
-    
+
     <!-- css -->
     <pathelement path="${lib.home}/sac-1.3.jar" />
     <pathelement path="${lib.home}/batik-all.jar" />
-    
+
     <!-- icu -->
     <pathelement path="${lib.home}/icu4j-3_6.jar" />
     
@@ -222,180 +222,36 @@ This ant build file:
         debug="${compile.debug}"
         deprecation="${compile.deprecation}"
         optimize="${compile.optimize}"
+        includeantruntime="false"
     >
       <classpath refid="compile.classpath"/>
       <include name="src/**/*.java"/>
     </javac>
 
   </target>
-<!-- ============= Jena and Performance Tests ================================ -->
-
-<target name="jenatest" depends="compile" description="Runs Jena and Performance Tests">
-    <java classname="edu.tufts.vue.JenaTest" failonerror="true" fork="true">
-        <classpath refid="compile.classpath" />
-    </java>
-    
-</target>
-<!-- ==================== Artifact Smoke Test ================================ -->
-    <target name="artifacttest" depends="compile" description="Dumps Some Artifact Repository Data" >
-        <java classname="test.repository.artifact.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-
-<!-- ==================== Local Files Smoke Test ================================ -->
-    <target name="localfilestest" depends="compile" description="Dumps Some Local Files Repository Data" >
-        <java classname="test.repository.localfiles.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-
-<!-- ==================== Google Global Smoke Test ================================ -->
-    <target name="googleglobaltest" depends="compile" description="Dumps Some Google Global Repository Data" >
-        <java classname="test.repository.google.global.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-
-<!-- ==================== Google Local Smoke Test ================================ -->
-    <target name="googlelocaltest" depends="compile" description="Dumps Some Google Local Repository Data" >
-        <java classname="test.repository.google.local.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-
-<!-- ==================== Tufts Digital Library Smoke Test ================================ -->
-    <target name="tdltest" depends="compile" description="Dumps Some Tufts Digital Library Repository Data" >
-        <java classname="test.repository.tdl.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-<!-- ==================== Provider Smoke Test ================================ -->
-    <target name="providertest" depends="compile" description="Dumps Some Provider Data" >
-        <java classname="test.provider.provider" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-    </target>
-<!-- =================== Fedora 2.0 Tests===================================-->
-<target name="fedora20test" depends="compile" description="Tests for loading fedora 2.0 osid and data from repository">
-    <junit printsummary="yes" haltonerror="true" haltonfailure="true" fork="true">
-        <formatter type="plain" usefile="false"/>
-        <test name="edu.tufts.osidimpl.repository.fedora_2_0.TestRepository"/>
-        <classpath refid="compile.classpath"/>
-    </junit>
-</target>
-<!-- =================== Fedora 2.0 Tests===================================-->
-<target name="fedoratest" depends="compile" description="Tests for loading fedora 2.0 osid and data from repository">
-        <java classname="test.repository.fedora20.repositoryDump" failonerror="true" fork="true">
-      <classpath refid="compile.classpath"/>
-        </java>
-</target>
-<!-- =========================Connectivity Matrix and Map Comparison Tests =======-->
-<target name="comparetest" depends="compile" description="Tests for Map Comparison">
-    <junit printsummary="yes" haltonerror="true" haltonfailure="true" fork="true">
-        <formatter type="plain" usefile="false" />
-        <test name="edu.tufts.vue.compare.TestConnectivityMatrix" />
-        <classpath refid="compile.classpath" />
-    </junit>
-</target>
-
-<!--- =============  CSS tests =========-->
-<target name="csstest" depends="compile" description="Tests for CSS">
-    <junit printsummary="yes" haltonerror="true" haltonfailure="true" fork="true">
-        <formatter type="plain" usefile="false" />
-        <test name="edu.tufts.vue.CSSTest" />
-        <classpath refid="compile.classpath" />
-    </junit>
-</target>
-
 
 <target name="test" depends="compile" description="Tests for Map Comparison">
     <junit printsummary="yes" logfailedtests="true" showoutput="true" haltonerror="true" haltonfailure="true" fork="true">
-        <formatter type="plain" />
-        <test name="edu.tufts.vue.VUETest" outfile="VUETest" todir="${basedir}"/>
-        <test name="tufts.vue.ToolboxTest" outfile="ToolboxTest" todir="${basedir}"/>
         <classpath refid="compile.classpath" />
+        <formatter type="plain" />
+        <batchtest fork="yes" todir="${basedir}">
+          <fileset dir="${basedir}/build/classes">
+            <include name="**/VUETest.class"/>
+            <include name="**/ToolboxTest.class"/>
+            <include name="**/TestConnectivityMatrix.class"/>
+            <include name="**/CSSTest.class"/>
+            <include name="**/TestRepository.class"/>
+          </fileset>
+        </batchtest>
     </junit>
 </target>
 
-<!--- =============  Repository Implementation Tests =========-->
-<target name="OsidTester" depends="compile" description="Tests Repository OSID Implementations via OsidTester tool">
-	<echo message="Blackships Ping Test"/>	
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="blackships-pingProfile.xml"/>
-	</java>
-	<echo message="Blackships Basic Searching Test"/>
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="blackships-basicProfile.xml"/>
-	</java>
-<!--	<echo message="Sakai Basic Test"/>
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="sakai-basicProfile.xml"/>
-	</java>
-	<echo message="Submitted Adapter Test"/>
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="submissionAdapterProfile.xml"/>
-	</java>
--->	
-	</target>
-	
-	<!--- =============  Sakai Integration Tests =========-->
-	<target name="SakaiIntegration" depends="compile" description="Tests Storing IMS CP in Sakai via OSID">
-	<java classname="edu.tufts.osidimpl.testing.sakai.SakaiIntegrationTest" failonerror="true" fork="true">
-		<classpath refid="compile.classpath"/>
-	</java>
-	</target>
-
-	<!--- =============  Ping Sakai Instance at Tufts For Basic OSID Connection =========-->
-	<target name="SakaiPing" depends="compile" description="Ping Sakai Instance at Tufts For Basic OSID Connection">
-	<echo message="Sakai Ping Test"/>
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="sakai-pingProfile.xml"/>
-	</java>
-	</target>
-
-	<!--- =============  Test upload to Sakai =========-->
-	<target name="SakaiUpload" depends="compile" description="Test upload to Sakai">
-	<echo message="Sakai Upload Test"/>
-	<java classname="junit.textui.TestRunner" failonerror="true" fork="true">
-		<arg value="edu.tufts.osidimpl.testing.repository.OsidTester"/>
-		<classpath refid="compile.classpath"/>
-		<sysproperty key="testProfile" value="sakai-uploadProfile.xml"/>
-	</java>
-	</target>
-
-<!-- ==================== Jar test code ================================ -->
-  <target name="jar-testsupport"  
-          depends="compile"
-          description="Create OSIDTest.jar containing all supporting files">
-
-    <mkdir dir="dist/lib/osid"/>    
-    <delete file="dist/lib/osid/OSIDTest-1.0a.jar"/>
-    <jar jarfile="dist/lib/osid/OSIDTest-1.0a.jar"
-         basedir="${build.class}" 
-         includes="edu/tufts/osidimpl/testing/*.*"/>
-    <jar jarfile="dist/lib/osid/OSIDTest-1.0a.jar"
-         basedir="${build.class}" 
-		 update="true"
-         includes="edu/tufts/osidimpl/testing/repository/*.*"/>
-  </target>
-  
-<!-- ==================== Compile VUE target ================================ -->
+ <!-- ==================== Compile VUE target ================================ -->
   <target name="compile-VUE"  
           description="Crun the compile target of the VUE src build script">
-	<!-- This is a poor solution but seems to work.  There are dependencies on
-		products of the VUE build among the test sources. -->
-	<echo message="  Compiling VUE source tree"/>
+  <!-- This is a poor solution but seems to work.  There are dependencies on
+  roducts of the VUE build among the test sources. -->
+ <echo message="  Compiling VUE source tree"/>
     <ant dir="../src" target="compile" />
   </target>
 
