adds taskdef for junit
http://stackoverflow.com/questions/9774264/junit-ant-task-junittask-was-not-found

--- a/VUE2/test/build.xml
+++ b/VUE2/test/build.xml
@@ -144,6 +144,10 @@ This ant build file:
     
   </path>
 
+<taskdef name="junit"
+   classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask">
+   <classpath refid="compile.classpath"/>
+</taskdef>
 
 <!-- ==================== All Target ====================================== -->
 <!--
